# myir-optee

./: Makefile
core/: core.mk  crypto.mk
core/arch/arm/: arm.mk
core/arch/arm/dts/: myb-stm32mp257x-1GB-resmem.dtsi  myb-stm32mp257x-1GB.dts  myb-stm32mp257x-2GB.dts  myb-stm32mp257x-base.dtsi  myb-stm32mp257x-rcc.dtsi  myb-stm32mp257x-rif.dtsi  stm32mp13-pinctrl.dtsi  stm32mp131.dtsi  stm32mp135.dtsi  stm32mp135f-dk.dts  stm32mp13xa.dtsi  stm32mp13xc.dtsi  stm32mp13xf.dtsi  stm32mp151.dtsi  stm32mp153.dtsi  stm32mp157a-dk1.dts  stm32mp157a-ed1.dts  stm32mp157a-ev1.dts  stm32mp157c-dk2.dts  stm32mp157c-ed1.dts  stm32mp157c-ev1.dts  stm32mp157d-dk1.dts  stm32mp157d-ed1.dts  stm32mp157d-ev1.dts  stm32mp157f-dk2.dts  stm32mp157f-ed1.dts  stm32mp157f-ev1.dts  stm32mp15xc.dtsi  stm32mp15xf.dtsi  stm32mp15xx-dhcom-som.dtsi  stm32mp15xx-dhcor-avenger96.dtsi  stm32mp15xx-dhcor-io1v8.dtsi  stm32mp15xx-dhcor-som.dtsi  stm32mp15xx-dkx.dtsi  stm32mp21-pinctrl.dtsi  stm32mp211.dtsi  stm32mp213.dtsi  stm32mp215.dtsi  stm32mp215f-dk-ca35tdcid-rcc.dtsi  stm32mp215f-dk-ca35tdcid-resmem.dtsi  (+26 more)
core/arch/arm/include/: arm32.h
core/arch/arm/kernel/: abort.c  (+7 more)
core/crypto/: sub.mk
core/drivers/: atmel_trng.c  frame_buffer.c  gic.c  imx_rngb.c  stm32_bsec.c  stm32_bsec3.c  stm32_cpu_opp.c  stm32_exti.c  stm32_fmc.c  stm32_gpio.c  stm32_gpu_opp.c  stm32_hpdma.c  stm32_hsem.c  stm32_i2c.c  stm32_ipcc.c  stm32_iwdg.c  stm32_ltdc.c  stm32_omm.c  stm32_rng.c  stm32_rtc.c  stm32_tamp.c  stm32_uart.c  stm32mp15_huk.c  stm32mp_pmic2.c  stm32mp_provisioning.c  stpmic2.c  sub.mk  xiphera_trng.c
core/drivers/adc/: adc_fw.c  stm32_adc.c  stm32_adc_core.c
core/drivers/clk/: clk-stm32-core.c  clk-stm32-core.h  clk-stm32-rcc.c  clk-stm32mp13.c  clk-stm32mp15.c  clk-stm32mp2-cal.c  clk-stm32mp21.c  clk-stm32mp25.c  clk.c  sub.mk
core/drivers/counter/: stm32_lptimer.c  stm32_stgen.c  stm32_tim.c
core/drivers/firewall/: firewall.c  stm32_etzpc.c  stm32_iac.c  stm32_rif.c  stm32_rifsc.c  stm32_risab.c  stm32_risaf.c  stm32_serc.c  sub.mk
core/drivers/mailbox/: mailbox.c
core/drivers/nvmem/: stm32_tamp_nvram.c
core/drivers/regulator/: regulator.c  regulator_dt.c  stm32_vrefbuf.c
core/drivers/remoteproc/: stm32_remoteproc.c
core/drivers/rstctrl/: stm32_rstctrl.c  stm32_rstctrl.h  stm32mp1_rstctrl.c  stm32mp21_rstctrl.c  stm32mp25_rstctrl.c
core/drivers/rtc/: rtc.c
core/drivers/scmi-msg/: clock.c  clock.h  regulator_consumer.c  sub.mk
core/drivers/wdt/: watchdog_sm.c
core/include/: console.h  display.h  keep.h
core/include/crypto/: crypto.h
core/include/drivers/: adc.h  clk.h  firewall.h  firewall_device.h  gic.h  mailbox.h  nvmem.h  regulator.h  rtc.h  scmi-msg.h  stm32_adc_core.h  stm32_bsec.h  stm32_cpu_opp.h  stm32_etzpc.h  stm32_gpio.h  stm32_i2c.h  stm32_iac.h  stm32_lptimer.h  stm32_ltdc.h  stm32_remoteproc.h  stm32_rif.h  stm32_rifsc.h  stm32_risab.h  stm32_risaf.h  stm32_rtc.h  stm32_tamp.h  stm32_uart.h  stm32mp1_rcc.h  stm32mp1_rcc_util.h  stm32mp21_rcc.h  stm32mp25_rcc.h  stm32mp_dt_bindings.h  stpmic2.h  wdt.h
core/include/kernel/: dt.h  dt_driver.h  mutex.h  pm.h  pseudo_ta.h  spinlock.h  thread.h  user_ta.h
core/include/mm/: core_mmu.h
core/kernel/: console.c  dt.c  dt_driver.c  mutex.c  notif.c  panic.c  pm.c  pseudo_ta.c  tee_ta_manager.c  thread.c  trace_ext.c  user_ta.c
core/lib/libfdt/: fdt_ro.c
core/lib/scmi-server/: conf-optee-stm32mp1.mk  conf-optee-stm32mp2.mk  conf.mk  scmi_clock_consumer.c  scmi_pd_consumer.c  scmi_regulator_consumer.c  scmi_reset_consumer.c  scmi_server.c  sub-optee-stm32mp1.mk  sub-optee-stm32mp2.mk  sub.mk
core/lib/scmi-server/SCP-firmware/arch/none/tfm/: Architecture.cmake  CMakeLists.txt
core/lib/scmi-server/SCP-firmware/arch/none/tfm/include/: arch_helpers.h  arch_interrupt.h  arch_main.h
core/lib/scmi-server/SCP-firmware/arch/none/tfm/src/: arch_interrupt.c  arch_main.c
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/stm32_pd/: CMakeLists.txt
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/stm32_pd/include/: mod_stm32_pd.h
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/stm32_pd/src/: mod_stm32_pd.c
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_console/: CMakeLists.txt  Module.cmake
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_console/src/: mod_tfm_console.c
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_mbx/: CMakeLists.txt  Module.cmake
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_mbx/include/: mod_tfm_mbx.h
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_mbx/src/: mod_tfm_mbx.c
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_regu_consumer/: CMakeLists.txt  Module.cmake
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_regu_consumer/include/: mod_tfm_regu_consumer.h
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_regu_consumer/src/: mod_tfm_regu_consumer.c
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_reset/: CMakeLists.txt  Module.cmake
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_reset/include/: mod_tfm_reset.h
core/lib/scmi-server/SCP-firmware/product/tfm-stm32mp2/module/tfm_reset/src/: mod_tfm_reset.c
core/mm/: core_mmu.c  mobj.c
core/pta/: device.c  rtc.c  scmi.c  sub.mk
core/pta/stm32mp/: bsec_pta.c  remoteproc_pta.c  sub.mk
core/pta/tests/: invoke.c  mbox.c  mbox_test.h  misc.c  sub.mk
core/tee/: entry_std.c  sub.mk  tee_cryp_utl.c  tee_svc.c
lib/libutee/: sub.mk  tee_api_property.c
lib/libutee/include/: pta_invoke_tests.h  pta_stm32mp_bsec.h  remoteproc_pta.h
lib/libutee/tui/: image.c  tee_tui.c
lib/libutils/ext/: qsort_helpers.c
lib/libutils/isoc/: bget_malloc.c  sub.mk
mk/: compile.mk  config.mk
patches/: 0001-4.0.0-stm32mp-r1.patch  series
scripts/: checkpatch_inc.sh
ta/: ta.mk
ta/mk/: build-user-ta.mk  ta_dev_kit.mk
ta/remoteproc/src/: elf_parser.c  elf_parser.h  remoteproc_core.c
ta/stm32mp_nvmem/: ta_stm32mp_nvmem.c
(+152 files in other folders)
